Add gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/mnt/vault1/rsunketa/router-verification-files/nocgen_router/openfpga-runs/dummy-run01/work
-/mnt/vault1/rsunketa/router-verification-files/nocgen_router/openfpga-runs/dummy-run01/router_bench_formal.vcd
-/mnt/vault1/rsunketa/router-verification-files/nocgen_router/openfpga-runs/dummy-run01/transcript
-/mnt/vault1/rsunketa/router-verification-files/nocgen_router/openfpga-runs/dummy-run01/vsim.wlf
+**/work
+*.vcd
+
